fix spacing bug for man-nav-list in style.css file

--- a/css/queries.css
+++ b/css/queries.css
@@ -36,6 +36,10 @@
     padding: 0 3.2rem;
   }
 
+  .main-nav-list {
+    gap: 3.2rem;
+  }
+
   .hero {
     gap: 4.8rem;
   }
