--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
   list-style-type: none;
   display: flex;
   align-items: center;
-  gap: 3.2rem;
+  gap: 4.8rem;
 }
 
 .main-nav-link:link,
